fix: Delete avatar method on swagger
