# docs/swagger.yaml
@@ -282,7 +282,7 @@ paths:
       tags:
       - auth
   /auth/account/avatar:
-    patch:
+    delete:
       description: deletes user's avatar image
       produces:
       - application/json
@@ -298,6 +298,37 @@ paths:
       security:
       - AccessToken: []
       summary: Delete user avatar
+      tags:
+      - auth
+    patch:
+      consumes:
+      - multipart/form-data
+      description: uploads a new avatar image for the user. Only PNG, JPG, and JPEG
+        formats are allowed
+      parameters:
+      - description: Avatar Image
+        in: formData
+        name: avatar
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responsebody.Account'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/responsebody.Message'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/responsebody.Message'
+      security:
+      - AccessToken: []
+      summary: Upload User Avatar
       tags:
       - auth
   /auth/account/confirm:
